# onnx-basic-test

./: Cargo.toml  me.md
src/: lib.rs  mnist.rs  simple_graph.rs  squeeze.rs
