[package]
name = "onnx-basic-test"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
log = "0.4.22"
ndarray = "0.16.1"
pollster = "0.3"
wasi = "=0.13.1"
# wonnx = { path = "../wonnx/wonnx" }
wonnx = { git = "https://github.com/wasi-gfx/wonnx.git", rev = "7136da4f1b3cd1f70acab2572a2cbc0c2c9eec7a" }
